[feat] Simple EDA for May effect with Kospi '06-'21
- Simple check of May effect in KOR by visualization
- 1 line chart and 2 bar chart

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 data/KRX예선데이터
 !data/.gitkeep
 !data/KRX예선데이터/지수/dummy.txt
+!data/external_data/.gitkeep
+data/external_data/kospi_20060102_20220701.csv
